--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -56,8 +56,8 @@
                 </div>
             </section>
             <!-- Works section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Works</h2>
                         <a href="#"><p>Take a look in our portfolio</p></a>
@@ -76,11 +76,11 @@
                             <h3>Personal Brand</h3>
                         </article>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- About Us section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>About Us</h2>
                         <p>Everything about us</p>
@@ -95,11 +95,11 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     </div>
                     <a href="about.html">Learn more about us</a>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Latest news section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Latest news</h2>
                     </header>
@@ -132,31 +132,40 @@
                             <cite>By Frances J.</cite>
                         </article>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Testimonials section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Testimonials</h2>
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
-                        <blockquote cite="Yuri Y.">
-                            <article>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</article>
-                        </blockquote>
-                        <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
-                        <blockquote cite="Dorrie S.">
-                            <article>Thank you so much for your help. Techium company is awesome!</article>
-                        </blockquote>
-                        <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
-                        <blockquote cite="Sven H.">
-                            <article>I love your system. Definitely worth the investment. I'd be lost without Techium company.</article>
-                        </blockquote>
+                        <article>
+                            <blockquote>
+                                <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
+                                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+                                <cite>Yuri Y.</cite>
+                            </blockquote>
+                        </article>
+                        <article>
+                            <blockquote>
+                                <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
+                                <p>Thank you so much for your help. Techium company is awesome!</p>
+                                <cite>Dorrie S.</cite>
+                            </blockquote>
+                        </article>
+                        <article>
+                            <blockquote>
+                                <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
+                                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+                                <cite>Sven H.</cite>
+                            </blockquote>
+                        </article>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Contact section -->
             <section>
                 <div>
